--- a/wedding/page/templates/page/layout.html
+++ b/wedding/page/templates/page/layout.html
@@ -60,7 +60,7 @@
                             <a{% if body_class == 'hotels' %} class="active"{% endif %} href="{% url 'hotels' %}">Hotels</a>
                         </li>
                         <li>
-                            <a{% if body_class == 'venue' %} class="active"{% endif %} href="{% url 'venue' %}">Venue</a>
+                            <a{% if body_class == 'venue' %} class="active"{% endif %} href="{% url 'venue' %}">Venue &amp; Registry</a>
                         </li>
                         <li>
                             <a{% if body_class == 'rsvp' %} class="active"{% endif %} href="{% url 'rsvp' %}">RSVP</a>
