--- a/wedding/page/templates/page/venue.html
+++ b/wedding/page/templates/page/venue.html
@@ -15,5 +15,11 @@
             Due to the owners passion for conservation, we
             respectfully request all guests adhere to their strict recycling policy.
         </p>
+
+        <h2>Registry</h2>
+
+        <p>The happy couple is registered at
+            <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&inventoryCallEnabled=true&registryId=543897669&pwsurl=">Bed Bath & Beyond</a> and
+            <a href="http://www.crateandbarrel.com/gift-registry/christin-doyle-and-daniel-wolf/r5603306">Crate and Barrel</a>.</p>
     </main>
 {% endblock %}
