brides sister copy change

--- a/wedding/page/templates/page/bridal-party.html
+++ b/wedding/page/templates/page/bridal-party.html
@@ -9,7 +9,7 @@
         <li class="large">
             <img src="dist/page/meg-94520f2c7a.jpg" alt="">
             <span class="name">Meghan Millar</span>
-            <span class="relationship">Sister of the Bride</span>
+            <span class="relationship">Bride&apos;s Sister</span>
         </li>
     </ul>
     <div class="clearfix"></div>
