updated error messaging when rsvping with invalid info

--- a/wedding/rsvp/templates/rsvp/rsvp.html
+++ b/wedding/rsvp/templates/rsvp/rsvp.html
@@ -60,7 +60,8 @@
         {% if lookup_error %}
             <h2>Not Found</h2>
             <p>
-                Please make sure you are using the zip code found on your invitation.
+                Please make sure you are using the name and zip code as printed on your invitation.
+                If you are still having trouble, you can <a href="mailto:danielrwolf5@gmail.com">email us</a> for help.
             </p>
 
         {% else %}
