--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -95,4 +95,12 @@ form {
     label[for="id_message"] {
         margin: 10px 0;
     }
+
+    label[for="id_shuttle"] {
+        margin-bottom: 0;
+    }
+
+    .hidden {
+        display: none;
+    }
 }
