removed redundant paragraph

--- a/wedding/page/templates/page/hotels.html
+++ b/wedding/page/templates/page/hotels.html
@@ -30,10 +30,10 @@
 
         <p>
             For your convenience, there will be a shuttle to and from our wedding
-            available to those guests staying at The Abbey.
+            available to those guests staying at The Abbey. The shuttle will leave
+            from the lobby of The Abbey promptly at 4:30. Please make sure you are 
+            ready to go!
         </p>
-
-        <p>Times updated closer to date.</p>
 
         <h2>Other Options</h2>
 
