updated URL to quality inn

--- a/wedding/page/templates/page/hotels.html
+++ b/wedding/page/templates/page/hotels.html
@@ -39,7 +39,7 @@
 
         <a href="http://www.bestwesternwoodstockinn.com">Best Western Woodstock Inn</a>
         &mdash; 15 minutes from venue<br />
-        <a href="http://www.woodstockqualityhotel.com/">Woodstock Quality Hotel</a> &mdash; 15 minutes from venue</dd>
+        <a href="https://www.choicehotels.com/illinois/woodstock/quality-inn-hotels/il387">Woodstock Quality Inn</a> &mdash; 15 minutes from venue</dd>
 
     </main>
 {% endblock %}
